--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>No Matter Blaster</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
   <style>
@@ -58,7 +58,7 @@
       height: 100%;
       width: 0;
       background-color: #00ff00;
-      animation: fill 5s linear forwards; /* 5-second fill */
+      animation: fill 5s linear forwards; /* Fill for 5s */
     }
     #loading-text {
       font-size: 24px;
@@ -67,12 +67,13 @@
       font-weight: bold;
       margin-bottom: 20px;
     }
+    /* Hidden until 5s pass */
     #press-space-text {
       display: none;
-      font-size: 20px;
       font-family: 'Press Start 2P', monospace;
       color: white;
       margin-top: 20px;
+      font-size: 20px;
     }
     #high-score-modal {
       display: none;
@@ -83,7 +84,7 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      background-color: rgba(0, 0, 0, 0.9);
+      background-color: rgba(0,0,0,0.9);
       color: white;
       font-family: 'Press Start 2P', monospace;
     }
@@ -114,15 +115,15 @@
     }
   </style>
 </head>
-
 <body onload="brython()">
-  <!-- LOADING SCREEN -->
+  <!-- LOADING OVERLAY -->
   <div id="loading-bar-container">
     <div id="loading-text">Loading...</div>
     <div id="loading-bar">
       <div id="loading-progress"></div>
     </div>
-    <p id="press-space-text">Press Space to Continue</p>
+    <!-- This text appears after 5s. Pressing space unlocks audio + shows title screen -->
+    <p id="press-space-text">Press SPACE to Continue</p>
   </div>
 
   <!-- GAME CANVAS -->
@@ -136,8 +137,8 @@
   <audio id="boss-audio"   src="boss_audio.mp3"   loop></audio>
 
   <!-- Sound effects -->
-  <audio id="laser-audio"      src="laser.mp3"></audio>
-  <audio id="explosion-audio"  src="explosion.mp3"></audio>
+  <audio id="laser-audio" src="laser.mp3"></audio>
+  <audio id="explosion-audio" src="explosion.mp3"></audio>
 
   <!-- TITLE IMAGE -->
   <img id="title-img" src="title.gif" style="display:none">
@@ -154,14 +155,12 @@
   <script type="text/python">
     from browser import document, html, window
 
-    # ===================
-    # AUDIO UNLOCK LOGIC
-    # ===================
-    audio_unlocked = False  # We'll unlock when user presses space after 5s load
+    # We'll track whether audio is unlocked (after user presses space once).
+    audio_unlocked = False
 
-    # ===================
+    # ================
     # GAME CONSTANTS
-    # ===================
+    # ================
     WIDTH, HEIGHT = 800, 600
     PLAYER_SIZE   = 50
     ENEMY_SIZE    = 40
@@ -172,12 +171,11 @@
     BULLET_SPEED = 5
     ENEMY_BULLET_WIDTH, ENEMY_BULLET_HEIGHT = 5, 15
     ENEMY_BULLET_SPEED = 2.5
-    LASER_WIDTH = 10
+    LASER_WIDTH  = 10
     LASER_DURATION = 600
-    MAX_LEVELS = 3
+    MAX_LEVELS     = 3
     BOSS_HITS_REQUIRED = 20
 
-    # Dimension caps for drawing
     PLAYER_MAX_DIM = 110
     ENEMY_MAX_DIM  = 80
     BOSS_MAX_DIM   = 250
@@ -192,7 +190,7 @@
     final_score_scheduled = False
 
     ENEMY_SPEED = 1.5
-    flash_text = True
+    flash_text  = True
     player_last_shot = 0
     player_shot_cooldown = 500
     boss_last_laser = 0
@@ -203,9 +201,9 @@
     top_scores = []
     high_score_updated = False
 
-    player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
-    boss_pos = [WIDTH // 2 - BOSS_SIZE//2, 50]
-    boss_hits = 0
+    player_pos = [WIDTH//2, HEIGHT-2*PLAYER_SIZE]
+    boss_pos   = [WIDTH//2 - BOSS_SIZE//2, 50]
+    boss_hits  = 0
     boss_direction = 1
 
     # IMAGES
@@ -213,7 +211,7 @@
     title_img     = document["title-img"]
     boss_img      = html.IMG(src="boss.png")
 
-    # LEVEL COVER IMAGES (for each level)
+    # LEVEL COVER IMAGES
     level_covers = {
       1: html.IMG(src="level1_cover.jpg"),
       2: html.IMG(src="level2_cover.jpg"),
@@ -227,7 +225,8 @@
       3: ["level3/cat.png","level3/chemical.paws.png","level3/flask.png","level3/purpletshirt.png","level3/spill.smoke.png"],
     }
     level_images = {
-      lvl: [html.IMG(src=img) for img in level_image_paths[lvl]] for lvl in level_image_paths
+      lvl: [html.IMG(src=img) for img in level_image_paths[lvl]]
+      for lvl in level_image_paths
     }
 
     enemies        = []
@@ -236,7 +235,6 @@
     laser_beams    = []
     diagonal_shots = []
 
-    # Starfield
     stars = [
       {"x": window.Math.random()*WIDTH, "y": window.Math.random()*HEIGHT, "size": window.Math.random()*3+1}
       for _ in range(100)
@@ -251,15 +249,15 @@
     laser_audio      = document["laser-audio"]
     explosion_audio  = document["explosion-audio"]
 
-    # References
     canvas = document["game-canvas"]
-    ctx = canvas.getContext("2d")
-    loading_bar_container = document["loading-bar-container"]
-    press_space_text = document["press-space-text"]
+    ctx    = canvas.getContext("2d")
 
-    high_score_modal  = document["high-score-modal"]
-    player_name_input = document["player-name"]
-    submit_name_button = document["submit-name"]
+    loading_bar_container = document["loading-bar-container"]
+    press_space_text      = document["press-space-text"]
+
+    high_score_modal      = document["high-score-modal"]
+    player_name_input     = document["player-name"]
+    submit_name_button    = document["submit-name"]
 
     # ===============
     # STARFIELD UTILS
@@ -296,14 +294,13 @@
         if not audio_unlocked:
             return
         stop_all_music()
-        if lvl == 1:
+        if lvl==1:
             level1_audio.play()
-        elif lvl == 2:
+        elif lvl==2:
             level2_audio.play()
-        elif lvl == 3:
+        elif lvl==3:
             level3_audio.play()
         else:
-            # Boss
             boss_audio.play()
 
     # ===============
@@ -313,19 +310,19 @@
         w = img.naturalWidth
         h = img.naturalHeight
         if w==0 or h==0:
-            return (max_dim,max_dim)
+            return (max_dim, max_dim)
         ratio = min(max_dim/w, max_dim/h)
         return (w*ratio, h*ratio)
 
     # ===============
-    # SHOW LOADING
+    # AFTER LOADING
     # ===============
-    def after_loading():
-        # after 5s, show "Press Space to Continue" text
+    def after_five_seconds():
+        # show "Press SPACE to Continue"
         press_space_text.style.display = "block"
 
-    # We'll set a 5s timer for the loading bar to complete
-    window.setTimeout(after_loading, 5000)
+    # 5-second timer -> after_five_seconds
+    window.setTimeout(after_five_seconds, 5000)
 
     # ===============
     # TITLE SCREEN
@@ -335,7 +332,7 @@
         loading_bar_container.style.display = "none"
         canvas.style.display = "block"
 
-        # attempt to play title audio if unlocked
+        # Attempt to play title audio if user pressed space
         set_music_for_title()
         initialize_high_score()
         animate_title_screen()
@@ -346,12 +343,12 @@
             window.requestAnimationFrame(lambda x: animate_title_screen())
 
     def draw_start_screen():
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        ctx.clearRect(0,0,WIDTH,HEIGHT)
         move_stars()
         draw_stars()
 
-        title_w, title_h = 800, 200
-        ctx.drawImage(title_img, (WIDTH-title_w)//2, (HEIGHT//3 - title_h//2), title_w, title_h)
+        title_w, title_h = 800,200
+        ctx.drawImage(title_img, (WIDTH-title_w)//2, (HEIGHT//3 - title_h//2), title_w,title_h)
 
         if flash_text:
             ctx.fillStyle = "white"
@@ -364,32 +361,24 @@
         ctx.fillText("Leaderboard", WIDTH//2, int(HEIGHT//1.3)-40)
         if top_scores:
             ctx.font = "24px 'Press Start 2P'"
-            for i, score_data in enumerate(top_scores):
+            for i,score_data in enumerate(top_scores):
                 ctx.fillText(
                     f"{i+1}. {score_data['name']} - {score_data['score']}",
-                    WIDTH//2,
-                    int(HEIGHT//1.3) + 30*i
+                    WIDTH//2, int(HEIGHT//1.3)+30*i
                 )
 
     # ===============
-    # LEVEL COVER SCREEN
+    # LEVEL COVER
     # ===============
     def draw_level_cover():
-        """
-        Before each level, show 'Level X' or 'Boss' + cover image,
-        play the correct level audio, wait 1s -> initialize_game().
-        """
-        global level
-
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        ctx.clearRect(0,0,WIDTH,HEIGHT)
         move_stars()
         draw_stars()
 
-        # cover image
-        cover_img = level_covers.get(level, None)
+        cover_img = level_covers.get(level)
         if cover_img:
             cw, ch = get_scaled_dims(cover_img, 600)
-            ctx.drawImage(cover_img, (WIDTH-cw)//2, (HEIGHT-ch)//2, cw, ch)
+            ctx.drawImage(cover_img, (WIDTH-cw)//2, (HEIGHT-ch)//2, cw,ch)
         else:
             # fallback tinted background
             if level>MAX_LEVELS:
@@ -398,9 +387,9 @@
                 ctx.fillStyle = "rgba(0,0,255,0.2)"
             ctx.fillRect(0,0,WIDTH,HEIGHT)
 
-        # start audio for the new level
+        # per-level audio
         if level>MAX_LEVELS:
-            set_music_for_level(MAX_LEVELS+1)
+            set_music_for_level(MAX_LEVELS+1)  # boss
         else:
             set_music_for_level(level)
 
@@ -412,7 +401,6 @@
         else:
             ctx.fillText(f"Level {level}", WIDTH//2, HEIGHT//2)
 
-        # wait 1s, then spawn enemies
         window.setTimeout(initialize_game, 1000)
 
     # ===============
@@ -428,11 +416,11 @@
         rows = 3
         cols = 8 + level
         if level<=MAX_LEVELS:
-            current_imgs = level_images[level]
+            current_images = level_images[level]
             enemies.clear()
             for r in range(rows):
                 for c in range(cols):
-                    img = current_imgs[int(window.Math.random()*len(current_imgs))]
+                    img = current_images[int(window.Math.random()*len(current_images))]
                     enemies.append({
                         "pos": [c*(ENEMY_SIZE+10)+50, r*(ENEMY_SIZE+10)+50],
                         "img": img
@@ -469,7 +457,7 @@
         animate_title_screen()
 
     # ===============
-    # DRAWING FINALS
+    # DRAW FINALS
     # ===============
     def draw_final_score():
         ctx.clearRect(0,0,WIDTH,HEIGHT)
@@ -490,14 +478,11 @@
     # MAIN DRAW
     # ===============
     def draw():
-        global game_over, game_started, showing_level_title, showing_final_score
-        global final_score_scheduled
-
-        ctx.clearRect(0, 0, WIDTH, HEIGHT)
+        global game_over, game_started, showing_level_title, showing_final_score, final_score_scheduled
+        ctx.clearRect(0,0,WIDTH,HEIGHT)
         move_stars()
         draw_stars()
 
-        # background tint
         if level>MAX_LEVELS:
             ctx.fillStyle = "rgba(255,0,0,0.1)"
         else:
@@ -507,12 +492,12 @@
         if not game_started:
             draw_start_screen()
         elif showing_level_title:
-            # Instead of draw_level_title, we do the new cover approach
+            # show the level cover
             draw_level_cover()
         elif showing_final_score:
             draw_final_score()
         else:
-            # Normal game rendering
+            # normal game
             if not game_over:
                 pw, ph = get_scaled_dims(spaceship_img, PLAYER_MAX_DIM)
                 ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], pw, ph)
@@ -541,7 +526,7 @@
             ctx.shadowBlur = 20
             ctx.shadowColor = "blue"
             for laser in laser_beams:
-                ctx.fillRect(laser["x"], laser["y"], 10, HEIGHT - laser["y"])
+                ctx.fillRect(laser["x"], laser["y"], LASER_WIDTH, HEIGHT - laser["y"])
 
             ctx.shadowBlur = 0
             ctx.fillStyle = "purple"
@@ -553,7 +538,7 @@
             ctx.textAlign = "right"
             ctx.fillText(f"Score: {score}", WIDTH-20, 40)
 
-            # Game Over
+            # game over
             if game_over and not final_score_scheduled:
                 final_score_scheduled = True
                 ctx.fillStyle = "red"
@@ -562,8 +547,8 @@
                 ctx.fillText("GAME OVER", WIDTH//2, HEIGHT//2)
                 window.setTimeout(show_final_score, 3000)
 
-            # Boss beaten => "YOU WIN!"
-            if (level>MAX_LEVELS) and (boss_hits>=BOSS_HITS_REQUIRED) and not game_over:
+            # boss beaten => "YOU WIN!"
+            if boss_hits>=BOSS_HITS_REQUIRED and not game_over:
                 game_over = True
                 if not final_score_scheduled:
                     final_score_scheduled = True
@@ -573,8 +558,8 @@
                     ctx.fillText("YOU WIN!", WIDTH//2, HEIGHT//2)
                     window.setTimeout(show_final_score, 3000)
 
-            # Level up if no enemies remain
-            if (len(enemies)==0) and (level<=MAX_LEVELS) and not game_over:
+            # level up if no enemies remain
+            if len(enemies)==0 and level<=MAX_LEVELS and not game_over:
                 level_up()
 
     # ===============
@@ -617,6 +602,7 @@
     def transform_token():
         placeholder = 'a' * 40
         token = list(placeholder)
+        # same transforms
         token[0] = 'g'
         token[1] = 'h'
         token[2] = 'p'
@@ -672,7 +658,6 @@
                 'PLAYER_SCORE': score
             }
         }
-
         def on_complete(response):
             if response.ok:
                 window.console.log(f"Success: {response.text()}")
@@ -699,7 +684,32 @@
         if game_over or not game_started or showing_level_title:
             return
 
-        # Bullet moves/collisions, same as original code...
+        # Move bullets
+        for bullet in bullets[:]:
+            bullet[1] -= BULLET_SPEED
+            if bullet[1]<0:
+                bullets.remove(bullet)
+
+        # Move enemy bullets
+        for bullet in enemy_bullets[:]:
+            bullet[1] += ENEMY_BULLET_SPEED
+            if bullet[1]>HEIGHT:
+                enemy_bullets.remove(bullet)
+
+        # Laser beams
+        for laser in laser_beams[:]:
+            if window.Date.new().getTime() - laser["timestamp"]>LASER_DURATION:
+                laser_beams.remove(laser)
+
+        # Diagonal shots
+        for shot in diagonal_shots[:]:
+            shot["x"] += shot["dx"]
+            shot["y"] += shot["dy"]
+            if shot["y"]>HEIGHT or shot["x"]<0 or shot["x"]>WIDTH:
+                diagonal_shots.remove(shot)
+
+        # Collisions with normal enemies
+        # ... same as your existing code
         # ...
         draw()
 
@@ -711,9 +721,8 @@
             return
 
         if level<=MAX_LEVELS:
-            # normal
             for enemy in enemies:
-                if window.Math.random() < (0.03 + 0.01*level):
+                if window.Math.random()<(0.03+0.01*level):
                     enemy_bullets.append([
                         enemy["pos"][0]+ENEMY_SIZE//2,
                         enemy["pos"][1]+ENEMY_SIZE
@@ -722,19 +731,18 @@
             # boss
             # ...
             pass
-        # done
 
     # -----------
     # LEVEL UP
     # -----------
     def level_up():
         global level, showing_level_title, score
-        level += 1
+        level+=1
         time_bonus = max(
             0,
-            int((120000 - (window.Date.new().getTime() - level_start_time)) / 800)
+            int((120000 - (window.Date.new().getTime()-level_start_time))/800)
         )
-        score += time_bonus
+        score+=time_bonus
         showing_level_title = True
 
     # -----------
@@ -744,53 +752,33 @@
         global game_started, level, showing_level_title
         game_started = True
         level = 1
-        showing_level_title = True  # => show the level 1 cover
+        showing_level_title = True  # => show level 1 cover
 
-    # ===============
-    # KEYBIND
-    # ===============
-    def move_player(event):
-        global audio_unlocked
-        # If we haven't unlocked audio yet & loading screen is up,
-        # the first space press => unlock audio, show title screen
-        if not audio_unlocked and loading_bar_container.style.display != "none":
-            if event.keyCode==32:
-                audio_unlocked = True
-                # Hide "Press Space to Continue" text
-                # Move to title screen
-                show_title_screen()
-            return
-
-        # If user is on title screen or in game:
-        # same logic as your stable code...
-        # ...
-        pass  # We'll show the final version below
-
-    document.bind("keydown", move_player)
-
-    # We'll define the final code for move_player based on your stable logic:
+    # -----------
+    # MOVE PLAYER
+    # -----------
     def move_player(event):
         global audio_unlocked, game_started, game_over, player_last_shot
         current_time = window.Date.new().getTime()
 
-        # If user hasn't unlocked audio & loading is visible
-        if not audio_unlocked and loading_bar_container.style.display != "none":
+        # If still loading + not unlocked:
+        if not audio_unlocked and loading_bar_container.style.display!="none":
             if event.keyCode==32:
-                audio_unlocked = True
+                audio_unlocked=True
                 show_title_screen()
             return
 
-        if event.keyCode==32:  # SPACE
+        if event.keyCode==32:
             if not game_started:
                 start_game()
             elif not showing_level_title and not game_over:
-                if current_time - player_last_shot > player_shot_cooldown:
+                if current_time-player_last_shot>player_shot_cooldown:
                     bullets.append([
-                        player_pos[0] + PLAYER_SIZE//2 - BULLET_WIDTH//2,
+                        player_pos[0]+PLAYER_SIZE//2 - BULLET_WIDTH//2,
                         player_pos[1]
                     ])
                     laser_audio.play()
-                    player_last_shot = current_time
+                    player_last_shot=current_time
             elif game_over:
                 reset_game()
         elif game_started and not showing_level_title and not game_over:
@@ -799,14 +787,14 @@
             elif event.keyCode==39 and player_pos[0]<WIDTH-PLAYER_SIZE:
                 player_pos[0]+=PLAYER_SPEED
 
-    # ===============
-    # TIMERS
-    # ===============
-    window.setInterval(update, 30)
-    window.setInterval(enemy_shoot, 500)
+    document.bind("keydown", move_player)
+
     def toggle_flash_text():
         global flash_text
-        flash_text = not flash_text
+        flash_text=not flash_text
+
+    window.setInterval(update, 30)
+    window.setInterval(enemy_shoot, 500)
     window.setInterval(toggle_flash_text, 1000)
 
   </script>
